ライセンス画面とLoggerの実装

--- a/DISample.xcworkspace/xcshareddata/IDETemplateMacros.plist
+++ b/DISample.xcworkspace/xcshareddata/IDETemplateMacros.plist
@@ -5,7 +5,7 @@
 	<key>FILEHEADER</key>
 	<string>
 //  Created by ___USERNAME___ on ___DATE___
-//  Copyright © ___YEAR___ ___USERNAME___. All rights reserved.
+//  Copyright ___USERNAME___. All rights reserved.
 //</string>
 </dict>
 </plist>
