--- a/DISampleAppPackage/.swiftpm/xcode/xcshareddata/xcschemes/DISampleApp.xcscheme
+++ b/DISampleAppPackage/.swiftpm/xcode/xcshareddata/xcschemes/DISampleApp.xcscheme
@@ -15,9 +15,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Develop"
-               BuildableName = "Develop"
-               BlueprintName = "Develop"
+               BlueprintIdentifier = "DISampleApp"
+               BuildableName = "DISampleApp"
+               BlueprintName = "DISampleApp"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -50,9 +50,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Develop"
-            BuildableName = "Develop"
-            BlueprintName = "Develop"
+            BlueprintIdentifier = "DISampleApp"
+            BuildableName = "DISampleApp"
+            BlueprintName = "DISampleApp"
             ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
