update firebase config

--- a/Production/Production/GoogleService-Info.plist
+++ b/Production/Production/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>961565281311-fr2r1um0426lvdlqp0jjdnfqdomu4r3t.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.961565281311-fr2r1um0426lvdlqp0jjdnfqdomu4r3t</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCSnQl_pzuOGvG0RI414VdfiMv36B3Ozeo</string>
 	<key>GCM_SENDER_ID</key>
