【UIテスト】UIテストの実装 #12

--- a/Development/Development.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Development/Development.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "44ABAB202B9B60AC0039ECF7"
+               BuildableName = "DevelopmentUITests.xctest"
+               BlueprintName = "DevelopmentUITests"
+               ReferencedContainer = "container:Development.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
