--- a/Production/Production.xcodeproj/xcshareddata/xcschemes/Production.xcscheme
+++ b/Production/Production.xcodeproj/xcshareddata/xcschemes/Production.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "44ABAB112B9B5B760039ECF7"
+               BuildableName = "ProductionUITests.xctest"
+               BlueprintName = "ProductionUITests"
+               ReferencedContainer = "container:Production.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
