【UIテスト】UIテスト時にオンボーディング前と後の状態を指定できるようにする（現状は勝手にオンボーディング済みであると仮定している） #54

--- a/Staging/Staging.xcodeproj/xcshareddata/xcschemes/Staging.xcscheme
+++ b/Staging/Staging.xcodeproj/xcshareddata/xcschemes/Staging.xcscheme
@@ -63,6 +63,12 @@
             ReferencedContainer = "container:Staging.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FirstLaunchUITest"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
