--- a/Development/Development.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Development/Development.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -63,6 +63,12 @@
             ReferencedContainer = "container:Development.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FirstLaunchUITest"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
