--- a/Production/Production.xcodeproj/xcshareddata/xcschemes/Production.xcscheme
+++ b/Production/Production.xcodeproj/xcshareddata/xcschemes/Production.xcscheme
@@ -63,6 +63,12 @@
             ReferencedContainer = "container:Production.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FirstLaunchUITest"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
