--- a/Development/Development.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Development/Development.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -68,6 +68,10 @@
             argument = "-FirstLaunchUITest"
             isEnabled = "NO">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-PlaceholderUITest"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
