【UIテスト】Development で UIテスト時のみ Mock を固定にして、UIテストで文字列指定できるようにする #13

--- a/Development/Development.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Development/Development.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -70,7 +70,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-PlaceholderUITest"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
