--- a/Production/Production.xcodeproj/xcshareddata/xcschemes/Production.xcscheme
+++ b/Production/Production.xcodeproj/xcshareddata/xcschemes/Production.xcscheme
@@ -69,6 +69,13 @@
             isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "IDEPreferLogStreaming"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
