#88 【Xcode】ReadmeなどをXcodeから見れるようにする

--- a/DISampleAppPackage/.swiftpm/xcode/xcshareddata/xcschemes/ViewSnapshotTest.xcscheme
+++ b/DISampleAppPackage/.swiftpm/xcode/xcshareddata/xcschemes/ViewSnapshotTest.xcscheme
@@ -14,7 +14,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:../ViewSnapshotTestPlan.xctestplan"
+            reference = "container:../xc_test_plan/ViewSnapshotTestPlan.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
