--- a/Development/Development.xcodeproj/xcshareddata/xcschemes/DevelopmentUITests.xcscheme
+++ b/Development/Development.xcodeproj/xcshareddata/xcschemes/DevelopmentUITests.xcscheme
@@ -14,7 +14,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:../UITestPlan.xctestplan"
+            reference = "container:../xc_test_plan/UITestPlan.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
