--- a/Staging/Staging.xcodeproj/xcshareddata/xcschemes/Staging.xcscheme
+++ b/Staging/Staging.xcodeproj/xcshareddata/xcschemes/Staging.xcscheme
@@ -41,6 +41,17 @@
                ReferencedContainer = "container:Staging.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "446F590E2BBE34350004F4E5"
+               BuildableName = "StagingUnitTests.xctest"
+               BlueprintName = "StagingUnitTests"
+               ReferencedContainer = "container:Staging.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
