【GitHub】【タグ生成】Incoming Webhook を設定して、通知を受ける #103

--- a/.github/workflows/tag_and_release_note_gen.yml
+++ b/.github/workflows/tag_and_release_note_gen.yml
@@ -1,4 +1,4 @@
-name: Generate Tag & Release Note Draft
+name: Generate Tag & Release Note
 
 on:
   workflow_dispatch:
@@ -8,10 +8,17 @@ on:
         required: true
         default: '0.0.0'
 
+env:
+  SLACK_USERNAME: DeployBot
+  SLACK_ICON: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
+  SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+
+    # Generate Tag & Release Note
     - name: Generate Release Note URL and Validate Tag
       run: |
         # Check tag format
@@ -25,4 +32,24 @@ jobs:
         BRANCH_NAME=$(echo ${{ github.ref }} | sed 's/refs\/heads\///')
         
         # Print the release note URL
-        echo "https://github.com/suguruTakahashi-1234/DISample/releases/new?tag=${{ github.event.inputs.tag }}&title=${{ github.event.inputs.tag }}&target=$BRANCH_NAME&prerelease=1"
+        RELEASE_NOTE_URL="https://github.com/suguruTakahashi-1234/DISample/releases/new?tag=${{ github.event.inputs.tag }}&title=${{ github.event.inputs.tag }}&target=$BRANCH_NAME&prerelease=1"
+        echo "RELEASE_NOTE_URL=$RELEASE_NOTE_URL" >> $GITHUB_ENV
+        echo "Release note URL: $RELEASE_NOTE_URL"
+
+    # Success
+    - name: Slack Notification on Success
+      uses: rtCamp/action-slack-notify@v2
+      if: success()
+      env:
+        SLACK_TITLE: Generate Tag & Release Note / Success
+        SLACK_COLOR: good
+        SLACK_MESSAGE: "$(RELEASE_NOTE_URL)"
+
+    # Failure
+    - name: Slack Notification on Failure
+      uses: rtCamp/action-slack-notify@v2
+      if: failure()
+      env:
+        SLACK_TITLE: Generate Tag & Release Note / Failure
+        SLACK_COLOR: danger
+        SLACK_MESSAGE: Failure Generate Tag & Release Note
