【GitHub】【タグ生成】Incoming Webhook を設定して、通知を受ける #103

--- a/.github/workflows/tag_and_release_note_gen.yml
+++ b/.github/workflows/tag_and_release_note_gen.yml
@@ -43,7 +43,7 @@ jobs:
       env:
         SLACK_TITLE: Generate Tag & Release Note / Success
         SLACK_COLOR: good
-        SLACK_MESSAGE: "$(RELEASE_NOTE_URL)"
+        SLACK_MESSAGE: "${{ env.RELEASE_NOTE_URL }}"
 
     # Failure
     - name: Slack Notification on Failure
