--- a/.github/workflows/tag_and_release_note_gen.yml
+++ b/.github/workflows/tag_and_release_note_gen.yml
@@ -9,6 +9,7 @@ on:
         default: '0.0.0'
 
 env:
+  RELEASE_NOTE_URL: null
   SLACK_USERNAME: DeployBot
   SLACK_ICON: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
