--- a/.github/workflows/swift_docc_hosting.yml
+++ b/.github/workflows/swift_docc_hosting.yml
@@ -2,7 +2,8 @@ name: Host Swift-DocC
 
 on:
   push:
-    branches: [ "main" ]
+    tags:
+      - "*"
   workflow_dispatch:
 
 # Allow one concurrent deployment
