#91 【Four Keys】Four Keys による開発指標の計測 [ci skip]

--- a/.github/workflows/issue_metrics.yml
+++ b/.github/workflows/issue_metrics.yml
@@ -41,6 +41,8 @@ jobs:
     - name: Create issue
       uses: peter-evans/create-issue-from-file@v5
       with:
-        title: Monthly issue metrics report
+        title: 【Report】Monthly issue metrics
         token: ${{ secrets.GITHUB_TOKEN }}
         content-filepath: ./issue_metrics.md
+        labels: |
+          report
